# cttt4by4

./: CMakeLists.txt  lib.c  main.c
tests/: board_test.c  hashtable_test.c  solve_test.c  speed_test.c
